# zmq-opencv-demo

./: CMakeLists.txt  client.cpp  server.cpp  vcpkg.json
scripts/: bootstrap.bat
